--- a/.gitignore
+++ b/.gitignore
@@ -1,4 +1,5 @@
 *.csv
 Quora_Insincere_Questions_Classification/model_repo/
 Quora_Insincere_Questions_Classification/uncased_L-12_H-768_A-12.zip
+.ipynb_checkpoints/
 
